--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "configr"]
+	path = configr
+	url = https://github.com/miachol/configr
+	shallow = true
+	registered = true
